--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="card">
-    <h2>David Rivera Vallejo</h2>
+    <h2>monserrat martinez gonzales</h2>
     <p><strong>Materia favorita:</strong> Programación</p>
     <img src="mi_foto.jpg" alt="Mi foto">
     <br>
