--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     }
   </style>
 </head>
-<body>
+<body>s
   <div class="card">
     <h2>monserrat martinez gonzales</h2>
     <p><strong>Materia favorita:</strong> Programación</p>
-    <img src="mi_foto.jpg" alt="Mi foto">
+    <img src="imagenes/imagen1.png" alt="Mi foto">
     <br>
     <a href="index.html">← Regresar al inicio</a>
   </div>
@@ -64,8 +64,8 @@
       padding: 20px;
     }
     img {
-      width: 150px;
-      height: 150px;
+      width: 200px;
+      height: 200px;
       border-radius: 50%;
       object-fit: cover;
     }
@@ -81,10 +81,27 @@
   <div class="card">
     <h2>David Rivera Vallejo</h2>
     <p><strong>Materia favorita:</strong> Programación</p>
-    <img src="mi_foto.jpg" alt="Mi foto">
+    <img src="imagenes/imagen2.png" alt="Mi foto">
     <br>
-    <a href="index.html">← Regresar al inicio</a>
+    <a href="index.html">
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Capítulo 1 - Spider-Man</title>
+</head>
+<body>
+
+  <!-- Enlace al capítulo 2 -->
+  <a href=".html">regresar al inicio</a>
+</body>
+</html></a>
+    </a>
   </div>
+</body>
+</html>s
 </body>
 </html><!DOCTYPE html>
 <html lang="es">
@@ -108,8 +125,8 @@
       padding: 20px;
     }
     img {
-      width: 150px;
-      height: 150px;
+      width: 15px;
+      height: 15px;
       border-radius: 50%;
       object-fit: cover;
     }
@@ -125,7 +142,7 @@
   <div class="card">
     <h2>David Rivera Vallejo</h2>
     <p><strong>Materia favorita:</strong> Programación</p>
-    <img src="mi_foto.jpg" alt="Mi foto">
+    <img src="imagenes/imagen2.png" alt="Mi foto">
     <br>
     <a href="index.html">← Regresar al inicio</a>
   </div>
