--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarjeta de Presentación - David</title>
+  <title>Tarjeta de Presentación - monserrat</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -37,17 +37,23 @@
   <div class="card">
     <h2>monserrat martinez gonzales</h2>
     <p><strong>Materia favorita:</strong> Programación</p>
-    <img src="imagenes/imagen1.png" alt="Mi foto">
+    <img src="imagenes/imagen5.jpg" alt="Mi foto">
     <br>
-    <a href="index.html">← Regresar al inicio</a>
+    <a href="index.html"> <!-- Enlace al capítulo 2 -->
+  <a href=".html">regresar al inicio</a>
+</body>
+</html></a>
+    </a>
   </div>
 </body>
-</html><!DOCTYPE html>
+</html>
+</body>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarjeta de Presentación - David</title>
+  <title>TDavid Rivera Vallejo</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -64,8 +70,8 @@
       padding: 20px;
     }
     img {
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       object-fit: cover;
     }
@@ -77,24 +83,13 @@
     }
   </style>
 </head>
-<body>
+<body>s
   <div class="card">
     <h2>David Rivera Vallejo</h2>
     <p><strong>Materia favorita:</strong> Programación</p>
-    <img src="imagenes/imagen2.png" alt="Mi foto">
+    <img src="imagenes/imagen4.jpg" alt="Mi foto">
     <br>
-    <a href="index.html">
-
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Capítulo 1 - Spider-Man</title>
-</head>
-<body>
-
-  <!-- Enlace al capítulo 2 -->
+    <a href="index.html"> <!-- Enlace al capítulo 2 -->
   <a href=".html">regresar al inicio</a>
 </body>
 </html></a>
@@ -105,46 +100,7 @@
 </body>
 </html><!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarjeta de Presentación - David</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      text-align: center;
-      padding: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px gray;
-      width: 300px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    img {
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-    a {
-      display: inline-block;
-      margin-top: 10px;
-      color: #007bff;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h2>David Rivera Vallejo</h2>
-    <p><strong>Materia favorita:</strong> Programación</p>
-    <img src="imagenes/imagen2.png" alt="Mi foto">
-    <br>
-    <a href="index.html">← Regresar al inicio</a>
+<head></a>
   </div>
 </body>
-</html>
+<html
