--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tarjeta de Presentación - monserrat</title>
+  <title>Tarjeta de Presentación - David</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -33,74 +33,69 @@
     }
   </style>
 </head>
-<body>s
-  <div class="card">
-    <h2>monserrat martinez gonzales</h2>
-    <p><strong>Materia favorita:</strong> Programación</p>
-    <img src="imagenes/imagen5.jpg" alt="Mi foto">
-    <br>
-    <a href="index.html"> <!-- Enlace al capítulo 2 -->
-  <a href=".html">regresar al inicio</a>
-</body>
-</html></a>
-    </a>
-  </div>
-</body>
-</html>
-</body>
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TDavid Rivera Vallejo</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      text-align: center;
-      padding: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px gray;
-      width: 300px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-    a {
-      display: inline-block;
-      margin-top: 10px;
-      color: #007bff;
-      text-decoration: none;
-    }
-  </style>
-</head>
-<body>s
+<body>
   <div class="card">
     <h2>David Rivera Vallejo</h2>
     <p><strong>Materia favorita:</strong> Programación</p>
     <img src="imagenes/imagen4.jpg" alt="Mi foto">
     <br>
-    <a href="index.html"> <!-- Enlace al capítulo 2 -->
-  <a href=".html">regresar al inicio</a>
-</body>
-</html></a>
-    </a>
+    <a href="index.html">← Regresar al inicio</a>
   </div>
 </body>
-</html>s
-</body>
-</html><!DOCTYPE html>
+</html>
+ <!DOCTYPE html>
 <html lang="es">
-<head></a>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+</head>
+<body>
+  <a href="capitulo2.html">Ir al Capítulo 2 ➡️</a>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tarjeta de Presentación - monse</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      text-align: center;
+      padding: 20px;
+    }
+    .card {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px gray;
+      width: 300px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    a {
+      display: inline-block;
+      margin-top: 10px;
+      color: #007bff;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h2>monserrat martinez gonzales</h2>
+    <p><strong>Materia favorita:</strong> Programación</p>
+    <img src="imagenes/imagen5.jpg" alt="Mi foto">
+    <br>
+    <a href=".html">← Regresar al inicio</a>
   </div>
 </body>
-<html
+</html>
